# octi

./: .gitignore  Makefile  Makefile.linux  README.md  build.pro  octi.pro
ai/: CMakeLists.txt  Makefile.armlinux  Makefile.linux  ai.pro
ai/attic/: Makefile.desc  Makefile.win32
ai/include/: AISearchAlgorithm.hxx  AlphaBetaSearch.hxx  ERSearch.hxx  MPIAlphaBetaSearch.hxx  ThreadAlphaBetaSearch.hxx  TranspositionTable.hxx  aiapi.h
ai/src/: AISearchAlgorithm.cxx  AlphaBetaSearch.cxx  ERSearch.cxx  MPIAlphaBetaSearch.cxx  ThreadAlphaBetaSearch.cxx  TranspositionTable.cxx
attic/: Makefile.desc  Makefile.win32
game/: CMakeLists.txt  Makefile.armlinux  Makefile.linux  game.pro
game/attic/: Makefile.armlinux  Makefile.desc  Makefile.win32
game/include/: GameClient.hxx  GameExceptions.hxx  GameServer.hxx  GameSession.hxx  RobotInterface.hxx  gameapi.h
game/src/: GameClient.cxx  GameExceptions.cxx  GameServer.cxx  GameSession.cxx
include/: OFKBoard.hxx  Octi2PlayerGameSearchState.hxx  OctiAgent.hxx  OctiBoard.hxx  OctiBoardDispWidget.hxx  OctiBoardFrame.hxx  OctiDefs.hxx  OctiGame.hxx  octiapi.h  (+16 more)
util/: CMakeLists.txt  Makefile.armlinux  Makefile.linux  TASK  util.pro
util/attic/: Makefile.desc  Makefile.win32
util/include/: Adler32.hxx  ArrayException.hxx  Barrier.hxx  Base64.hxx  BaseObject.hxx  BaseRuntimeClass.hxx  BigInteger.hxx  Boolean.hxx  BufferedArray.hxx  ByteUtil.hxx  CRC32.hxx  Calendar.hxx  Checksum.hxx  Collection.hxx  Condition.hxx  Config.hxx  Date.hxx  Dlist.hxx  DllManager.hxx  Error.hxx  Event.hxx  Exception.hxx  File.hxx  GF.hxx  Graph.hxx  HashTable.hxx  Hex.hxx  IOException.hxx  Inet.hxx  Main.hxx  Matrix.hxx  Monitor.hxx  Mutex.hxx  Packet.hxx  Pair.hxx  PtrReference.hxx  Queue.hxx  Slist.hxx  Socket.hxx  Stack.hxx  (+16 more)
util/src/: Adler32.cxx  ArrayException.cxx  Barrier.cxx  Base64.cxx  BaseObject.cxx  BigInteger.cxx  Boolean.cxx  BufferedArray.cxx  ByteUtil.cxx  CRC32.cxx  Calendar.cxx  Checksum.cxx  CodecTest.cxx  Collection.cxx  CollectionTest.cxx  Condition.cxx  Config.cxx  Date.cxx  Dlist.cxx  DllManager.cxx  Error.cxx  Event.cxx  Exception.cxx  File.cxx  Graph.cxx  HashTable.cxx  Hex.cxx  IOException.cxx  Inet.cxx  Main.cxx  Matrix.cxx  MiscTest.cxx  Monitor.cxx  Mutex.cxx  Packet.cxx  Queue.cxx  Slist.cxx  Socket.cxx  Stack.cxx  String.cxx  (+15 more)
(+95 files in other folders)
